--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,7 @@
-.DS_Store
+# Ignora archivos del sistema Mac 
+.DS_store
+# Ignora la carpeta node_modules
+node_modules
+# Ignora el archivo antiguo.css
+antiguo.css
+
