--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 # Ignora archivos del sistema Mac 
-.DS_store
+*.DS_store
 # Ignora la carpeta node_modules
 node_modules
 # Ignora el archivo antiguo.css
